--- a/src/Lesson6/css/style.css
+++ b/src/Lesson6/css/style.css
@@ -22,9 +22,22 @@ input {
     width: 100%;
     margin-bottom: 10px;
 }
+
 input[type=checkbox] {
     width: auto;
 }
+
 input[type=radio] {
     width: auto;
+}
+
+input [type=number] {
+    width: 200px;
+
+    size: auto;
+
+}
+
+textarea {
+    resize: vertical;
 }
