--- a/src/Lesson7/css/style.css
+++ b/src/Lesson7/css/style.css
@@ -2,7 +2,13 @@
     /*box-sizing: border-box;*/
     margin: 0px;
 }
-.cards-item{
+
+.container   {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.cards-item {
     width: 400px;
     /*height: 400px;*/
     background-color: black;
@@ -10,19 +16,70 @@
     margin: 20px;
     padding: 30px;
     font-size: 30px;
-    border: 4px solid red;
+    /*border: 4px solid red;*/
+    border-style: solid;
+    border-color: black;
+    border-width: 20px;
+    border-image: url("https://lom77.ru/wp-content/uploads/2018/10/%D0%A2%D1%80%D0%B0%D0%BD%D1%81%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%82%D0%BE%D1%80.jpg") 100 repeat;
+    /*border-image-repeat: stretch ;*/
     float: right;
 }
+
 .cards-item img {
     width: 100%;
 }
+
 .cards-display-inline .cards-item {
     display: inline-block;
     float: none;
     vertical-align: top;
 }
+
 .clearfix {
     content: "";
     display: table;
     clear: both;
+}
+
+.box {
+    width: 500px;
+    height: 700px;
+    background-color: black;
+    margin: 0 auto;
+    position: relative;
+    /*position: fixed;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate(-50%, -50%);*/
+}
+
+.square {
+    width: 50px;
+    height: 70px;
+    background-color: yellow;
+    /*margin: 0 auto;*/
+    margin: auto;
+    position: absolute;
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate(-50%, -50%);*/
+    /*top: 0;*/
+    /*right: auto;*/
+    /*bottom: auto;*/
+    /*left: 0;*/
+    z-index: 3;
+}
+
+.red_square {
+    background-color: red;
+    top: 20px;
+    left: 20px;
+    z-index: 1;
+}
+
+.grin_square {
+    background-color: green;
+    top: 40px;
+    left: 40px;
+    z-index: 2;
 }
